# PyMTEX

./: .gitignore  CLAUDE.md  USAGE.md  analyse_go2.py  analyse_labotex.py  pyproject.toml
pymtex/: __init__.py
pymtex/ebsd/: __init__.py  ebsd.py
pymtex/geometry/: __init__.py  miller.py  orientation.py  quaternion.py  rotation.py  symmetry.py
pymtex/texture/: __init__.py  _plot_utils.py  calcodf.py  io.py  odf.py  polefigure.py
tests/ebsd/: test_ebsd.py
tests/geometry/: test_miller.py  test_orientation.py  test_quaternion.py  test_rotation.py  test_symmetry.py
tests/texture/: test_io.py  test_polefigure.py
