[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymtex"
version = "0.1.0"
description = "Python port of the MTEX crystallographic texture analysis toolbox"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
interactive = [
    "plotly>=5.0",   # for odf.plotODF3D() interactive 3D visualisation
]

[tool.pytest.ini_options]
testpaths = ["tests"]
